--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/styles.css" />
-  <title>Домашня робота 3</title>
+  <title>Домашня робота 6</title>
 </head>
 
 <body>
+  <!-- heder -->
   <header class="header">
     <div class="container">
       <nav class="header-nav">
@@ -51,6 +52,7 @@
       </ul>
     </div>
   </header>
+  <!-- main -->
   <main>
     <!-- hero -->
     <section class="hero">
@@ -355,7 +357,7 @@
   <!-- footer -->
   <footer class="footer">
     <div class="container">
-      <div class="footer-contakt footer-box">
+      <div class="footer-contakt">
         <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-span">Studio</span></a>
         <address class="footer-contact">
           <ul class="footer-list list">
@@ -369,7 +371,7 @@
           </ul>
         </address>
       </div>
-      <div class="footer-join footer-box">
+      <div class="footer-join">
         <p class="footer-title">присоединяйтесь</p>
         <ul class="footer-box-list list">
           <li class="footer-box-item">
@@ -402,16 +404,91 @@
           </li>
         </ul>
       </div>
-    </div>
+
+
+      <div class="footer-subscribe">
+        <p class="footer-title">Подпишитесь на рассылку</p>
+        <form class="footer-form">
+          <input type="email" name="footer-mail" id="footer-mail" class="footer-input" placeholder="E-mail" required>
+          <button type="submit" class="footer-btn btn">Надіслати
+            <svg class="footer-icon" width="24" height="24">
+              <use href="./img/icons.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
+
+
+
+
   </footer>
+
+
+
+
+
+  <!-- modal -->
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
+      <!-- button close -->
       <button type="button" class="modal-close-btn" data-modal-close>
         <svg class="footer-soc-icon" width="20" height="20">
           <use href="./img/icons.svg#icon-close-black"></use>
         </svg>
         <script src="./js/modal.js"></script>
+        <!-- registration -->
       </button>
+      <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+      <form class="modal-form">
+        <ul class="modal-list list">
+          <li class="modal-item">
+            <label class="modal-label" for="user-name">Ім'я</label>
+            <div class="modal-wrap">
+              <input type="text" name="user-name" id="user-name" class="modal-input" required>
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </li>
+          <li class="modal-item">
+            <label class="modal-label" for="user-mail">Пошта</label>
+            <div class="modal-wrap">
+              <input type="email" name="uset-mail" id="user-mail" class="modal-input" required>
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </li>
+          <li class="modal-item">
+            <label class="modal-label" for="user-tel">Телефон</label>
+            <div class="modal-wrap">
+              <input type="tel" name="uset-tel" id="user-tel" class="modal-input" required>
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </li>
+        </ul>
+        <div class="modal-textarea">
+          <label class="modal-label" for="user-textarea">Коментарій</label>
+          <textarea name="user-textarea" id="user-textarea" class="user-text-area"
+            placeholder="Введіть текст"></textarea>
+        </div>
+        <div class="contract">
+          <input type="checkbox" name="private" id="private" class="modal-chec visually-hidden">
+          <label for="private" class="modal-text"><span>
+              <svg class="chec-icon" width="11" height="8">
+                <use href="./img/icons.svg#icon-chec"></use>
+              </svg>
+            </span>Погоджуюся з розсилкою та приймаю<a href="">&nbspУмови договору</a>
+          </label>
+        </div>
+
+
+
+
+        <button type="submit" class="modal-btn btn">Надіслати</button>
+      </form>
     </div>
   </div>
 </body>
