--- a/portfolio.html
+++ b/portfolio.html
@@ -213,7 +213,7 @@
           <ul class="footer-list list">
             <li class="footer-item footer-item-text">г. Киев, пр-т Леси Украинки, 26</li>
             <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
+              <a href="mailto:info@mail.com" class="footer-mail link">info@mail.com</a>
             </li>
             <li class="footer-item">
               <a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
@@ -254,7 +254,7 @@
           </li>
         </ul>
       </div>
-      
+
     </div>
   </footer>
 </body>
