прогнав через прітер

--- a/index.html
+++ b/index.html
@@ -404,8 +404,6 @@
           </li>
         </ul>
       </div>
-
-
       <div class="footer-subscribe">
         <p class="footer-title">Подпишитесь на рассылку</p>
         <form class="footer-form">
@@ -417,16 +415,8 @@
           </button>
         </form>
       </div>
-
-
-
-
+    </div>
   </footer>
-
-
-
-
-
   <!-- modal -->
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
@@ -480,13 +470,9 @@
               <svg class="chec-icon" width="11" height="8">
                 <use href="./img/icons.svg#icon-chec"></use>
               </svg>
-            </span>Погоджуюся з розсилкою та приймаю<a href="">&nbspУмови договору</a>
+            </span>Погоджуюся з розсилкою та приймаю<a href="">&nbsp; Умови договору</a>
           </label>
         </div>
-
-
-
-
         <button type="submit" class="modal-btn btn">Надіслати</button>
       </form>
     </div>
