--- a/portfolio.html
+++ b/portfolio.html
@@ -205,58 +205,68 @@
     </section>
   </main>
   <!-- footer -->
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-contakt footer-box">
-        <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-span">Studio</span></a>
-        <address class="footer-contact">
-          <ul class="footer-list list">
-            <li class="footer-item footer-item-text">г. Киев, пр-т Леси Украинки, 26</li>
-            <li class="footer-item">
-              <a href="mailto:info@mail.com" class="footer-mail link">info@mail.com</a>
-            </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </div>
-      <div class="footer-join footer-box">
-        <p class="footer-title">присоединяйтесь</p>
-        <ul class="footer-box-list list">
-          <li class="footer-box-item">
-            <a href="" class="footer-soc-link link">
-              <svg class="footer-soc-icon" width="20" height="20">
-                <use href="./img/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
+<footer class="footer">
+  <div class="container">
+    <div class="footer-contakt">
+      <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-span">Studio</span></a>
+      <address class="footer-contact">
+        <ul class="footer-list list">
+          <li class="footer-item footer-item-text">г. Киев, пр-т Леси Украинки, 26</li>
+          <li class="footer-item">
+            <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
           </li>
-          <li class="footer-box-item">
-            <a href="" class="footer-soc-link link">
-              <svg class="footer-soc-icon" width="20" height="20">
-                <use href="./img/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-box-item">
-            <a href="" class="footer-soc-link link">
-              <svg class="footer-soc-icon" width="20" height="20">
-                <use href="./img/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-box-item">
-            <a href="" class="footer-soc-link link">
-              <svg class="footer-soc-icon" width="20" height="20">
-                <use href="./img/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
+          <li class="footer-item">
+            <a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </div>
-
+      </address>
     </div>
-  </footer>
+    <div class="footer-join">
+      <p class="footer-title">присоединяйтесь</p>
+      <ul class="footer-box-list list">
+        <li class="footer-box-item">
+          <a href="" class="footer-soc-link link">
+            <svg class="footer-soc-icon" width="20" height="20">
+              <use href="./img/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-box-item">
+          <a href="" class="footer-soc-link link">
+            <svg class="footer-soc-icon" width="20" height="20">
+              <use href="./img/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-box-item">
+          <a href="" class="footer-soc-link link">
+            <svg class="footer-soc-icon" width="20" height="20">
+              <use href="./img/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-box-item">
+          <a href="" class="footer-soc-link link">
+            <svg class="footer-soc-icon" width="20" height="20">
+              <use href="./img/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer-subscribe">
+      <p class="footer-title">Подпишитесь на рассылку</p>
+      <form class="footer-form">
+        <input type="email" name="footer-mail" id="footer-mail" class="footer-input" placeholder="E-mail" required>
+        <button type="submit" class="footer-btn button">Надіслати
+          <svg class="footer-icon" width="24" height="24">
+            <use href="./img/icons.svg#icon-send"></use>
+          </svg>
+        </button>
+      </form>
+    </div>
+  </div>
+</footer>
 </body>
 
 </html>
